fixed some bugs and spacings

--- a/styles.css
+++ b/styles.css
@@ -343,6 +343,7 @@ section.active {
 
 .resume-box p {
     font-size: 1.6rem;
+    padding-bottom: 1.6rem;
 }
 
 .resume-box .desc {
